--- a/page/demo.css
+++ b/page/demo.css
@@ -1,44 +1,140 @@
-
-body {
-    background: #fff;
-    font-family: "Open Sans", sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Montserrat:500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    top: 0;
-    position: fixed;
-    display: flex;
+.nav {
     width: 100%;
-    z-index: 1000;
-    background: #fff;
-    justify-content: space-around;
-    align-items: center;
-}
-.navb img{
-    width: 220px;
-    cursor: pointer;
-}
-ul {
+    background-color: #fff;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
+    padding: 20px 2%;
+    position: fixed;
+    top: 0px;
+    z-index: 10;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
 }
-nav ul li{
-     list-style: none;
-     margin: 5px 10px;
+
+.nav li,
+a,
+button {
+    float: left;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    color: #2e3d49;
+    display: block;
+    text-decoration: none;
+    text-align: center;
 }
-nav ul li a{
-    padding: 4px 12px;
+
+.nav ul li img {
+    width: 20px;
+    margin-right: 10px;
+    transform: translateY(5px);
+    padding-top: 5px;
+}
+
+.nav ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav ul li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav ul li a:hover {
+    color: #ffbb3b;
+}
+.nav .switch-tab {
     cursor: pointer;
+    visibility: hidden;
+}
+
+.nav .check-box {
+    cursor: pointer;
+    visibility: hidden;
+}
+#icon {
+    padding-right: 10px;
+    color: #a83279;
+}
+.title {
+    margin-top: 150px;
+    margin-left: 100px;
+}
+.title span {
+    font-weight: 700;
+    font-family: "Open Sans", sans-serif;
+    font-size: 60px;
+    color: #2e3d49;
+}
+.title .shortdesc {
+    padding: 10px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    color: #2e3d49;
+    margin-bottom: 50px;
+}
+.course {
+    display: grid;
+    justify-content: center;
+}
+
+.cbox {
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.cbox .det {
+    height: 60px;
+    margin: 10px;
+    background: #fff;
+    cursor: pointer;
+    border-radius: 50px;
+}
+.cbox .det a {
+    justify-content: space-around;
+    width: 100%;
+    padding: 20px;
+    border-radius: 50px;
+    border: 1px solid #a83279;
+    font-size: 15px;
+    color: #272529;
+    font-family: cursive;
     text-decoration: none;
 }
-nav ul li a:hover{
-    background: linear-gradient(to right,#a83279,#ffbb3b);
-    border-radius: 10px;
-    color: #fff;
 
+.cbox .det a:hover {
+    background: linear-gradient(to right, #a83279, #ffbb3b);
+    color: white;
 }
-nav {
-    padding-bottom: 20px;
-    border-bottom: 1px solid #0005;
+@media screen and (max-width: 1000px) {
+    .nav ul,
+    .nav .search {
+        display: none;
+    }
+    .nav #learned-logo {
+        transition: 1s ease;
+        margin-left: 40%;
+        transform: scale(1.2);
+    }
+    .nav ul li {
+        width: 100%;
+        margin-bottom: 5px;
+    }
+    .nav .switch-tab {
+        visibility: visible;
+        color: #a83279;
+    }
+    .nav .check-box {
+        visibility: visible;
+    }
 }
